<resources>
    <string name="app_name">Asodesunidos</string>
    <string name="ver_mis_prestamos">Ver Mis Prestamos</string>
    <string name="gestonar_mis_ahorros">Gestionar mis ahorros</string>
    <string name="calculo_cuota">Calculo Cuota</string>
    <string name="informacion_personal">Informacion Personal</string>
    <string name="informacion_del_cliente">Informacion del Cliente</string>
    <string name="cedula">Cedula:</string>
    <string name="nombre">Nombre:</string>
    <string name="salario">Salario:</string>
    <string name="telefono">Telefono:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="estado_civil">Estado civil:</string>
    <string name="direccion">Direccion:</string>
    <string name="ejemCred">Ex: 10000000</string>
    <string name="asignar_credito">Asignar Credito</string>
    <string name="periodo_del_credito">Periodo del credito</string>
    <string name="ingrese_el_credito">Ingrese el credito:</string>
    <string name="este_credito_no_puede_ser_mayor_al_45_del_salario">**Este credito no puede ser mayor al 45% del salario**</string>
    <string name="hipotecario">Hipotecario</string>
    <string name="educaci_n">Educación</string>
    <string name="personal">Personal</string>
    <string name="viajes">Viajes</string>
    <string name="tipo_de_credito">Tipo de credito</string>
    <string name="_3_annos">3 años</string>
    <string name="_5_annos">5 años</string>
    <string name="_10_annos">10 años</string>
    <string name="asignar">Asignar</string>
    <string name="monto_a_cancelar_por_mes">Monto a cancelar por mes:</string>
    <string name="monto_mensual_del_credito">Monto Mensual del Credito</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="lista_de_prestamos">Lista de préstamos</string>
    <string name="prestamo">Préstamo</string>
    <string name="monto">Monto</string>
    <string name="fecha">Fecha</string>
    <string name="realizar_pago">Realizar pago</string>
    <string name="hint_id">Ingrese el número de cédula</string>
    <string name="hint_name">Ingresar nombre del cliente</string>
    <string name="hint_salary">Ingrese el salario del cliente</string>
    <string name="hint_phone">Ingrese el número de teléfono</string>
    <string name="hint_birthdate">Fecha de nacimiento</string>
    <string name="button_add">Añadir</string>
    <string name="title_add_client">Agregar Cliente</string>
    <string name="hint_address">Dirección</string>
    <string name="prompt_marital_status">Seleccione su estado civil</string>
    <string name="estado_civil_prompt">Selecciona tu estado civil</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="spinnerType">Tipo</string>
    <string name="spinnerTime">Periodo</string>
    <string name="ingrese_la_cedula_del_cliente">Ingrese la cédula del cliente:</string>
    <string name="cedulaAsignarCredito">Cedula</string>
    <string name="mis_prestamos">MIS PRESTAMOS</string>
    <string name="informacion_del_prestamo">Información del Préstamo</string>
    <string name="realizar_pago_del_prestamo">Realizar pago del Préstamo</string>
    <string name="ingrese_el_monto_a_pagar">Ingrese el monto a pagar:</string>
    <string name="_100000">100000</string>
    <string name="pagar">PAGAR</string>
    <string name="regresar">Regresar</string>
    <string name="cuotaCaclcular">CALCULAR CUOTA</string>
    <string name="prestamoMonto">Monto del ahorro</string>
    <string name="tipo_de_crédito">Tipo de crédito:</string>
    <string name="plazoMeses">Plazo en meses:</string>
    <string name="CalcularCuotaMensual">Calcular cuota mensual</string>
    <string name="cuota_mensual">Cuota mensual:</string>
    <string name="pantalla_administrativa">Pantalla Administrativa</string>
    <string name="agregar_un_cliente">Agregar un cliente</string>
    <string name="asignar_un_pr_stamo">Asignar un Préstamo</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="ingresar_contrasena">Ingresar contrasena</string>
    <string name="todo">TODO</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="admin">Admin</string>
    <string name="cliente">Cliente</string>
    <string name="ingresar">Ingresar</string>
    <string name="salir">Salir</string>
    <string name="id">ID</string>
    <string name="tipo">TIPO</string>
    <string name="mensual">MENSUAL</string>
    <string name="accion">ACCION</string>
    <string name="id_del_pr_stamo">ID del préstamo:</string>
    <string name="c_dula_del_cliente">Cédula del cliente:</string>
    <string name="montoClientePagado">Monto:</string>
    <string name="inter_s">Interés:</string>
    <string name="plazo">Plazo:</string>
    <string name="cuota_mensualClientePagado">Cuota mensual:</string>
    <string name="tipoClientePagado">Tipo:</string>
</resources>