<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="272dp"
        android:layout_height="34dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="332dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/asignar_credito"
        android:textAlignment="center"
        android:textColor="#015c56"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/txtCedulaCliente"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="284dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ejemCred"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="158dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="284dp"
        android:text="@string/este_credito_no_puede_ser_mayor_al_45_del_salario"
        android:textSize="6sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp,TextSizeCheck" />

    <Spinner
        android:id="@+id/spinnerTime"
        android:layout_width="137dp"
        android:layout_height="72dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="184dp"
        android:contentDescription="@string/spinnerTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="300dp"
        android:fontFamily="monospace"
        android:text="@string/ingrese_el_credito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="137dp"
        android:layout_height="72dp"
        android:layout_marginStart="220dp"
        android:layout_marginBottom="184dp"
        android:contentDescription="@string/spinnerType"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="256dp"
        android:text="@string/periodo_del_credito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="169dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="64dp"
        android:text="@string/monto_a_cancelar_por_mes"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="109dp"
        android:layout_height="19dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="256dp"
        android:text="@string/tipo_de_credito"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtMontoMensual"
        android:layout_width="215dp"
        android:layout_height="28dp"
        android:layout_marginStart="192dp"
        android:layout_marginBottom="64dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="272dp"
        android:layout_height="34dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="92dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/monto_mensual_del_credito"
        android:textAlignment="center"
        android:textColor="#015c56"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnAsignar"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="@color/soldelLogo"
        android:text="@string/asignar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="301dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/informacion_del_cliente"
            android:textAlignment="center"
            android:textColor="#015c56"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/cedula"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/nombre"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/salario"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtInteres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/telefono"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtPlazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/fecha_de_nacimiento"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtCuota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/estado_civil"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/direccion"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>