<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#015c56"
        android:text="@string/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="151dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="196dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/realizar_pago_del_prestamo"
            android:textAlignment="center"
            android:textColor="#015c56"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:fontFamily="monospace"
            android:text="@string/ingrese_el_monto_a_pagar"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/txtPagar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/_100000"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints,TextFields" />

        <Button
            android:id="@+id/btnPagar"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/soldelLogo"
            android:text="@string/pagar"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="314dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/informacion_del_prestamo"
            android:textAlignment="center"
            android:textColor="#015c56"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/id_del_pr_stamo"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/c_dula_del_cliente"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/montoClientePagado"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/inter_s"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtInteres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/plazo"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtPlazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/cuota_mensualClientePagado"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtCuota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/tipoClientePagado"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>